* Added crs.messages=FALSE capabilities to clsd()

Changes from Version 0.15-30 to 0.15-31 [01-May-2018]

* basis="auto" was default, doc/code discrepancy fixed

* Hattip to Thibault Vatter who patched an issue with weights not being functional in crsiv.R

* Fixed issue with compiler compliance to support ICC and retain backwards compatability with MSVC C++

Changes from Version 0.15-29 to 0.15-30 [03-Dec-2017]

* dim.plot() replaced by n2mfrow() for determining layout of multiple
  figures on one device

* Fixed issue where, occasionally during cross-validation, execution of
  the function npglpreg() could halt with an error indicating missing
  value needed where TRUE/FALSE needed

Changes from Version 0.15-28 to 0.15-29 [06-Oct-2017]

* Fixed issue pointed out by Brian Ripley (thanks!) about double ** _X; in the nomad code

* Updated licence to GPL (>= 3)

Changes from Version 0.15-27 to 0.15-28 [06-Oct-2017]

* Zhenghua worked his magic to furnish a computationally efficient glp.model.matrix using a C backend similar to Simon Wood's C backend for his tensor.product.model.matrix

* Fixed issue with integer predictors and NOMAD for npglpreg() arising from upgrade to latest version of NOMAD

* Fixed issue with min.poll.size arising from upgrade to latest version of NOMAD

Changes from Version 0.15-26 to 0.15-27 [06-May-2017]

* Zhenghua fixed minor issue with dim.bs()

* Incorporating Simon Wood's C-based tensor product code (was using his R-based code, the C code is substantially faster)

* Naming of variables in NOMAD port aligned with Brian Ripley's comment ('Identifiers starting with an underscore followed by an upper-case letter or another underscore are reserved for system macros and should not be used in portable code (including not as guards in C/C++ headers).')

Changes from Version 0.15-25 to 0.15-26 [29-April-2017]

* Zhenghua patched up issues arising with windows build

* crs_init.c attempts to deal with registration issue/note
