@@ -157,7 +157,7 @@ in \code{x} are included or omitted from the resulting estimate }
   For the continuous predictors the regression spline model employs
   either the additive or tensor product B-spline basis matrix for a
   multivariate polynomial spline via the B-spline routines in the GNU
-  Scientific Library (\url{http://www.gnu.org/software/gsl/}) and the
+  Scientific Library (\url{https://www.gnu.org/software/gsl/}) and the
   \code{\link{tensor.prod.model.matrix}} function }
 
    \item{knots}{ a character string (default \code{knots="quantiles"})
@@ -308,7 +308,7 @@ in \code{x} are included or omitted from the resulting estimate }
 
   The regression spline model employs the tensor product B-spline basis
   matrix for a multivariate polynomial spline via the B-spline routines
-  in the GNU Scientific Library (\url{http://www.gnu.org/software/gsl/})
+  in the GNU Scientific Library (\url{https://www.gnu.org/software/gsl/})
   and the \code{\link{tensor.prod.model.matrix}} function.
 
   When \code{basis="additive"} the model becomes additive in nature
@@ -461,7 +461,7 @@ in \code{x} are included or omitted from the resulting estimate }
 
   Abramson, M.A. and C. Audet and G. Couture and J.E. Dennis Jr. and and
   S. Le Digabel (2011), \dQuote{The NOMAD project}. Software available
-  at http://www.gerad.ca/nomad.
+  at https://www.gerad.ca/nomad.
 
   Craven, P. and G. Wahba (1979), \dQuote{Smoothing Noisy Data With
     Spline Functions,} Numerische Mathematik, 13, 377-403.
