@@ -211,7 +211,7 @@ krscvNOMAD(xz,
   For the continuous predictors the regression spline model employs
   either the additive or tensor product B-spline basis matrix for a
   multivariate polynomial spline via the B-spline routines in the GNU
-  Scientific Library (\url{http://www.gnu.org/software/gsl/}) and the
+  Scientific Library (\url{https://www.gnu.org/software/gsl/}) and the
   \code{\link{tensor.prod.model.matrix}} function.
 
   For the discrete predictors the product kernel function is of the
@@ -251,7 +251,7 @@ krscvNOMAD(xz,
 
   Abramson, M.A. and C. Audet and G. Couture and J.E. Dennis Jr. and
   S. Le Digabel (2011), \dQuote{The NOMAD project}. Software available
-  at http://www.gerad.ca/nomad.
+  at https://www.gerad.ca/nomad.
 
   Craven, P. and G. Wahba (1979), \dQuote{Smoothing Noisy Data With
   Spline Functions,} Numerische Mathematik, 13, 377-403.
