@@ -53,7 +53,7 @@ to others, kindly email me the relevant information and I will
 incorporate it into this FAQ.
 
 This FAQ refers to the most recent version, which as of this writing
-is 0.15-31. Kindly update your version should you not be using the
+is 0.15-32. Kindly update your version should you not be using the
 most current (from within R, \texttt{update.packages()} ought to do
 it, though also see \ref{update} below.). See the appendix in this
 file for cumulative changes between this and previous versions of the
@@ -650,6 +650,16 @@ For the second predictor use \texttt{x2} and
 \clearpage
 
 \appendix
+
+\section*{Changes from Version 0.15-31 to 0.15-32 [19-Nov-2019]}
+
+\begin{itemize}
+
+\item Corrected return value for \texttt{mgcv\_tmm()} (was void, not valid address of R object)
+
+\item Added \texttt{crs.messages=FALSE} capabilities to \texttt{clsd()}
+
+\end{itemize}
 
 \section*{Changes from Version 0.15-30 to 0.15-31 [01-May-2018]}
 
