@@ -1,11 +1,11 @@
-  @Book{AER,
+@Book{AER,
     title = {Applied Econometrics with {R}},
     author = {Christian Kleiber and Achim Zeileis},
     year = {2008},
     publisher = {Springer-Verlag},
     address = {New York},
     note = {{ISBN} 978-0-387-77316-2},
-    url = {http://CRAN.R-project.org/package=AER},
+    url = {https://CRAN.R-project.org/package=AER},
   }
 
 @ARTICLE{CRIBARI_NETO_ZARKOS:1999,
@@ -17,7 +17,7 @@ VOLUME={14},
 NUMBER={3},
 PAGES={319-29},
 MONTH={May-June},
-NOTE={Available at http://ideas.repec.org/a/jae/japmet/v14y1999i3p319-29.html}
+NOTE={Available at https://ideas.repec.org/a/jae/japmet/v14y1999i3p319-29.html},
 }
 
   @Manual{Ecdat,
@@ -25,7 +25,7 @@ NOTE={Available at http://ideas.repec.org/a/jae/japmet/v14y1999i3p319-29.html}
     author = {Yves Croissant},
     year = {2011},
     note = {R package version 0.1-6.1},
-    url = {http://CRAN.R-project.org/package=Ecdat},
+    url = {https://CRAN.R-project.org/package=Ecdat},
   }
 
 @TECHREPORT{FARNSWORTH:2006,
@@ -33,7 +33,7 @@ AUTHOR = "Farnsworth, Grant V.",
 TITLE = "Econometrics in {R}",
 YEAR = "2008",
 MONTH = "October",
-NOTE = "Available at http://cran.r-project.org/doc/contrib/Farnsworth-EconometricsInR.pdf"}
+NOTE = "Available at https://cran.r-project.org/doc/contrib/Farnsworth-EconometricsInR.pdf"}
 
   @Article{HAYFIELD_RACINE:2008,
     title = {Nonparametric Econometrics: The np Package},
@@ -42,7 +42,7 @@ NOTE = "Available at http://cran.r-project.org/doc/contrib/Farnsworth-Econometri
     year = {2008},
     volume = {27},
     number = {5},
-    url = {http://www.jstatsoft.org/v27/i05/},
+    url = {https://www.jstatsoft.org/v27/i05/},
   }
 
 @book{HASTIE_TIBSHIRANI:1990,
@@ -98,14 +98,16 @@ PAGES = "1-88"}
 	MONTH = "October",
 	PAGES = "1107-1114"}
 
-
-  @Manual{Rmpi,
-    title = {Rmpi: Interface (Wrapper) to MPI (Message-Passing Interface)},
+@Article{Rmpi,
+    title = {Rmpi: Parallel Statistical Computing in R},
     author = {Hao Yu},
-    year = {2001},
-    note = {R package version 0.5-8},
-    url = {http://www.stats.uwo.ca/faculty/yu/Rmpi},
-  }
+    journal = {R News},
+    year = {2002},
+    volume = {2},
+    number = {2},
+    pages = {10--14},
+    url = {https://cran.r-project.org/doc/Rnews/Rnews_2002-2.pdf},
+}
 
 @BOOK{WAHBA:1990,
 AUTHOR = "Wahba, G.",
