@@ -60,7 +60,7 @@ ORGANIZATION = {R Foundation for Statistical Computing},
 ADDRESS = {Vienna, Austria},
 YEAR = {2011},
 NOTE = {{ISBN} 3-900051-07-0},
-URL = {http://www.R-project.org/}}
+URL = {https://www.R-project.org/}}
 
 @ARTICLE{ZHOU_WOLFE:2000,
 AUTHOR = "Zhou, S. and D. A. Wolfe",
